--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div id="page-wrapper">
 <header id="header">
-			<a id="logo1" href="index.html"><img src="logo3.png" atl="acme logo"></a>
+			<a id="logo1" href="index.html"><img src="logo3.png" alt="acme logo"></a>
 			<h1>My Demo Site</h1>
 </header>
 <nav id="main-nav">
@@ -43,7 +43,7 @@
         </ul>
         
        <div id="center">
-          <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU frameborder="0" allowfullscreen></iframe>
+          <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU" frameborder="0" allowfullscreen> </iframe>
         </div>
       </div>
     <aside id="side-content">
@@ -52,11 +52,11 @@
       <a href="#"><li>Article 1</li></a>
       <p>Preview of very interesting article article</p>
       <a href="#"><li>Article 2</li></a>
-      <p> Preview of very interesting article article  </p>
+      <p> Preview of very interesting article article</p>
       <a href="#"><li>Article 3</li></a>
       <p>Preview of very interesting article article</p>
       <a href="#"><li>Article 4</li></a>
-      <p> Preview of very interesting article article  </p>
+      <p> Preview of very interesting article article</p>
      </ol>
     </aside>
    </main>
