--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Clean Up Lab</title>
-  <meta name="" content="">
+  
 </head>
+
 <body>
 <div id="page-wrapper">
 <header id="header">
@@ -49,19 +50,17 @@
     <aside id="side-content">
    <h3>Interesting Articles</h3>
      <ol id="news">
-      <a href="#"><li>Article 1</li></a>
-      <p>Preview of very interesting article article</p>
-      <a href="#"><li>Article 2</li></a>
-      <p> Preview of very interesting article article</p>
-      <a href="#"><li>Article 3</li></a>
-      <p>Preview of very interesting article article</p>
-      <a href="#"><li>Article 4</li></a>
-      <p> Preview of very interesting article article</p>
+      <li><a href="#"><li>Article 1</li></a><div><p>Preview of very interesting article article</p></div></li>
+      <li><a href="#"><li>Article 2</li></a><div><p> Preview of very interesting article article</p></div></li>
+      <li><a href="#"><li>Article 3</li></a><div><p>Preview of very interesting article article</p></div></li>
+      <li><a href="#"><li>Article 4</li></a><div><p> Preview of very interesting article article</p></div></li>
      </ol>
     </aside>
    </main>
    
-    <footer id = "footer" >Footer Content is here</footer>
+    <footer id = "footer" >
+      <p>Footer Content is here</p>
+    </footer>
  </div>
 </body>
 
