--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Clean Up Lab</title>
-  
+
 </head>
 
 <body>
@@ -50,10 +50,10 @@
     <aside id="side-content">
    <h3>Interesting Articles</h3>
      <ol id="news">
-      <li><a href="#"><li>Article 1</li></a><div><p>Preview of very interesting article article</p></div></li>
-      <li><a href="#"><li>Article 2</li></a><div><p> Preview of very interesting article article</p></div></li>
-      <li><a href="#"><li>Article 3</li></a><div><p>Preview of very interesting article article</p></div></li>
-      <li><a href="#"><li>Article 4</li></a><div><p> Preview of very interesting article article</p></div></li>
+      <li><a href="#">Article 1</a><div><p>Preview of very interesting article article</p></div></li>
+      <li><a href="#">Article 2</a><div><p> Preview of very interesting article article</p></div></li>
+      <li><a href="#">Article 3</a><div><p>Preview of very interesting article article</p></div></li>
+      <li><a href="#">Article 4</a><div><p> Preview of very interesting article article</p></div></li>
      </ol>
     </aside>
    </main>
